--- a/ruoyi-admin/src/main/resources/templates/index.html
+++ b/ruoyi-admin/src/main/resources/templates/index.html
@@ -81,6 +81,7 @@
                             <a  href="#"><span class="fa arrow"></span></a>
                             <ul  class="nav nav-third-level">
                                 <li ><a class="menuItem" th:href="@{/system/dept}" >部门管理</a></li>
+                                <li ><a class="menuItem" th:href="@{/system/dict}" >字典管理</a></li>
                             </ul>
                         </li>
                     </ul>
